<ScrollView
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Spinner
            android:id="@+id/muses_spinner"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/refresh"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/refresh" />
        <Button
            android:id="@+id/connect"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/connect" />
        <Button
            android:id="@+id/disconnect"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/disconnect" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="33dp">
        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="Measure"
            android:id="@+id/measure_start"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="Game Start"
            android:id="@+id/game_start"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="Game Stop"
            android:id="@+id/game_stop"/>


    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/radioGroup">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Theta/Gamma"
                    android:id="@+id/radioButton1"
                    android:checked="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SMR/High Beta"
                    android:id="@+id/radioButton2"
                    android:layout_alignParentTop="true"
                    android:layout_toEndOf="@+id/radioButton1" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SMR/Mid Beta"
                    android:id="@+id/radioButton3"
                    android:layout_alignTop="@+id/radioButton4"
                    android:layout_alignParentStart="true" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SMR/Gamma"
                    android:id="@+id/radioButton4"
                    android:layout_below="@+id/radioButton2"
                    android:layout_toEndOf="@+id/radioButton1" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="High Beta"
                    android:id="@+id/radioButton5"
                    android:layout_below="@+id/radioButton3"
                    android:layout_alignParentStart="true" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Theta / Beta"
                    android:id="@+id/radioButton6"
                    android:layout_below="@+id/radioButton3"
                    android:layout_toEndOf="@+id/radioButton3" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Theta / (Alpha + Beta)"
                    android:id="@+id/radioButton7"
                    android:layout_below="@+id/radioButton5"
                    android:layout_alignParentStart="true" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(SMR + Mid Beta) / Theta"
                    android:id="@+id/radioButton8"
                    android:layout_below="@+id/radioButton7"
                    android:layout_alignParentStart="true" />
            </RelativeLayout>


        </RadioGroup>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/status" />
        <TextView
            android:id="@+id/con_status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/undefined" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/battery"
            android:gravity="end"/>
        <TextView
            android:id="@+id/con_battery"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:textSize="16sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    <TextView
        android:layout_width="180dp"
        android:layout_height="46dp"
        android:textSize="16sp"
        android:text="@string/eeg"
        android:gravity="center"
        android:id="@+id/eeg"/>

        <TextView
            android:id="@+id/power_ratio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:gravity = "center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="180dp"
            android:layout_height="46dp"
            android:textSize="16sp"
            android:text="@string/horseshoe"
            android:gravity="center"/>

        <TextView
            android:id="@+id/horseshoe0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:gravity = "center"/>
        <TextView
            android:id="@+id/horseshoe1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:gravity = "center"/>
        <TextView
            android:id="@+id/horseshoe2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:gravity = "center"/>
        <TextView
            android:id="@+id/horseshoe3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:gravity = "center"/>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </LinearLayout>

    <com.jjoe64.graphview.GraphView
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:id="@+id/graph" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="33dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:text="Reset graph"
            android:id="@+id/graph_reset"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/version" />
        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/undefined" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal" >
        </LinearLayout>

</LinearLayout>

</ScrollView>